RESOLVED FIXED18856
[GTK] variable initialization missing
https://bugs.webkit.org/show_bug.cgi?id=18856
Summary [GTK] variable initialization missing
Benjamin Otte
Reported 2008-05-02 15:20:22 PDT
not initializing the m_needsXEmbed variable could have very funny results. Most often those results would be crashes.
Attachments
patch (521 bytes, patch)
2008-05-02 15:21 PDT, Benjamin Otte
no flags
Benjamin Otte
Comment 1 2008-05-02 15:21:31 PDT
Alp Toker
Comment 2 2008-05-02 16:14:12 PDT
Landed in r32828.
Alp Toker
Comment 3 2008-05-02 16:15:35 PDT
(I changed the 0 to false, moved it to match the position in the header and wrote up a ChangeLog entry for this. Don't forget to mark the patch for review. Thanks!)
Note You need to log in before you can comment on or make changes to this bug.