2008-05-02  Benjamin Otte  <otte@gnome.org>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=18856
        [GTK] variable initialization missing

        Not initializing the m_needsXEmbed variable could have very funny
        results. Most often those results would be crashes.

        * plugins/PluginView.cpp:
        (WebCore::PluginView::PluginView):


Canonical link: https://commits.webkit.org/26068@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32828 268f45cc-cd09-0410-ab3c-d52691b4dbfc